2011-12-25  6.7.4-2 Cristy  <quetzlzacatenango@image...>
  * Relax when PerlMagick tosses an image when an exception is thrown.

2011-12-20  6.7.4-1 Cristy  <quetzlzacatenango@image...>
  * Use PTR2IV() and INT2PTR() macros to avoid int to ptr cast messages.

2011-08-25  6.7.2-0 Cristy  <quetzlzacatenango@image...>
  * Fix fault for Thumbnail() with GIF animation (problem report and patch
    from Shigeki Morimoto).

2011-08-09  6.7.1-4 Cristy  <quetzlzacatenango@image...>
  * Add a  simple "ignore this type" style typemap to get past a xsubpp
    exception in recent versions of Perl.

2011-06-06  6.7.0-5 Cristy  <quetzlzacatenango@image...>
  * Set modulate() colorspace predicated on parameter (e.g. brightness is HSB).

2011-01-25  6.6.7-3 Cristy  <quetzlzacatenango@image...>
  * Verify color parameter is a Perl array to avoid seg fault (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=7&t=17928).

2010-11-11  6.6.5-6 Cristy  <quetzlzacatenango@image...>
  * Check that image exists before accessing its member (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=17502).

2010-11-01  6.6.5-6 Cristy  <quetzlzacatenango@image...>
  * The gravity attribute must set the ImageInfo gravity property (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=17282).

2009-12-08  6.5.8-5 <kmx@volny...>
  * A couple of minor changes to Makefile.PL to support Strawberry Perl.

2009-12-06  6.5.8-4 Cristy  <quetzlzacatenango@image...>
  * Support the crop() gravity option.

2009-11-23  6.5.8-0 Cristy  <quetzlzacatenango@image...>
  * Add 'dither' option to Remap().

2009-10-18  6.5.7-0 Cristy  <quetzlzacatenango@image...>
  * Interpret gravity properly for ExtentImage().
  * Support the  Modulate() method parameter, 'lightness.'

2009-10-08  6.5.6-10 <kmx@volny...>
  * Improve PerlMagick.PL to work with Strawberry Perl under Windows.

2009-08-02  6.5.4-8 Cristy  <quetzlzacatenango@image...>