@@ -9073,18 +9073,15 @@ Mogrify(ref,...)
           if (attribute_flag[4] != 0)
             quantize_info->measure_error=
               argument_list[4].integer_reference != 0 ? MagickTrue : MagickFalse;
-          if (attribute_flag[5] != 0)
-            (void) QueryColorDatabase(argument_list[5].string_reference,
-              &image->transparent_color,exception);
-          if (attribute_flag[5] && argument_list[5].integer_reference)
-            {
-              (void) QuantizeImages(quantize_info,image);
-              goto PerlException;
-            }
           if (attribute_flag[6] != 0)
+            (void) QueryColorDatabase(argument_list[6].string_reference,
+              &image->transparent_color,exception);
+          if (attribute_flag[7] != 0)
             quantize_info->dither_method=(DitherMethod)
-              argument_list[6].integer_reference;
-          if ((image->storage_class == DirectClass) ||
+              argument_list[7].integer_reference;
+          if (attribute_flag[5] && argument_list[5].integer_reference)
+              (void) QuantizeImages(quantize_info,image);
+          else if ((image->storage_class == DirectClass) ||
               (image->colors > quantize_info->number_colors) ||
               (quantize_info->colorspace == GRAYColorspace))
             (void) QuantizeImage(quantize_info,image);
